# agentic-ai-bootcamp

./: .gitignore  pyproject.toml
challenge/llm_workflow/: main.py  mcp_http_client.py
challenge/mcp-server-invoice-test/: main.py
challenge/mcp-server-qna-test/: main.py
challenge/mcp-servers/invoice/src/mcp_server_invoice/: qna_agent.py  server_http.py  test_mcp_server.py
challenge/mcp-servers/qna/src/mcp_server_qna/: server.py
tutorial/jupyter_notebook/: 01_inference_endpoint.ipynb  02_introduction_mcp.ipynb  03_low_level_mcp.ipynb  04_langraph_agent.ipynb  05_challenge.ipynb  mcp_client.py  mcp_server_low_level.py  mcp_server_low_level_http.py
