[project]
name = "agentic-ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==2.13.0.2",
    "jupyterlab==4.4.10",
    "langchain==0.3.27",
    "langchain-nvidia-ai-endpoints>=0.3.19",
    "langgraph==0.6.11",
]
